--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
-body { 
-	padding-top: 50px;
+body {
     position: relative;
-    font-family: "Microsoft YaHei"; 
+    font-family: "Microsoft YaHei";
+}
+#navbar-menu {
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 70px;
 }
 .icon {
        width: 1em; height: 1em;
@@ -25,7 +32,7 @@ footer {
 }
 /*个人介绍*/
 .intro-bg{
-	padding: 100px 0 200px 0;
+	
 	background-color: #2c3e50;
 
 }
@@ -51,7 +58,7 @@ footer {
 }
 /*专业技能*/
 #skillswrap{
-	padding: 100px 0 200px 0;
+	
 	background-color: #f2f2f2;
 }
 #skillswrap .container .row{
@@ -63,12 +70,12 @@ footer {
 }
 #skillswrap .container .row .col-lg-3 {
 	margin-bottom: 130px;
-} 
+}
 #pop,#pop:hover{ text-decoration:none; color:#333;cursor:pointer}
 
 /*工作经历*/
 #work-exp{
-	padding: 100px 0 200px 0;
+	
 	background-color: #9D4F4F;
 	color: #fff;
 }
@@ -83,7 +90,7 @@ footer {
 }
 /*作品展示*/
 #demos{
-	padding: 100px 0 200px 0;
+	
 	background-color: #549688;
 	color: #fff;
 }
@@ -95,7 +102,7 @@ footer {
 }
 /*联系方式*/
 #contact{
-	padding: 100px 0 200px 0;
+	
 	background-color: #76664d;
 	color: #fff;
 }
@@ -111,4 +118,11 @@ footer {
 #contact .container .row .col-lg-6 img{
 	width: 70px;
 	height: 70px;
+}
+
+.op0{
+	opacity: 0;
+}
+.op{
+	opacity: 1;
 }
